# esp-platform

./: .gitmodules  README.md
docs/: SETUP-v2.md
docs/architecture/: bacnet-server-design.md  data-model-v2.md  hal-design.md  platform-variants.md  rt-rules-v2.md  uart-bridge-protocol.md
docs/hardware/: bom-v2.md  hardware-spec-v2.md
docs/strategy/: CLAUDE-v2.md
firmware-c6/: CMakeLists.txt  sdkconfig.defaults
firmware-c6/components/bacnet/: CMakeLists.txt  bacnet_datalink_glue.c  bacnet_object_map.c  bacnet_objects.c  bacnet_server.c  bacnet_transport.c  bacnet_transport_mstp.c
firmware-c6/components/bacnet/include/: bacnet_object_map.h  bacnet_objects.h  bacnet_server.h  bacnet_transport.h
firmware-c6/components/bacnet/port/: bacnet-config.h  bacnet_port_systime.c
firmware-c6/components/bsp/: CMakeLists.txt  hal_gpio.c  hal_i2c.c  hal_i2c_expander.c  hal_nvs.c  hal_sensor_local.c  hal_timer.c  hal_uart.c  hal_uart_mstp.c  hal_wdt.c
firmware-c6/components/bsp/include/: hal_gpio.h  hal_i2c.h  hal_i2c_expander.h  hal_nvs.h  hal_sensor_local.h  hal_timer.h  hal_uart.h  hal_uart_mstp.h  hal_wdt.h
firmware-c6/components/bsp/mock/: hal_gpio_mock.c  hal_gpio_mock.h  hal_i2c_expander_mock.c  hal_i2c_expander_mock.h  hal_nvs_mock.c  hal_nvs_mock.h  hal_sensor_local_mock.c  hal_sensor_local_mock.h  hal_timer_mock.c  hal_timer_mock.h  hal_uart_mstp_mock.c  hal_uart_mstp_mock.h  hal_wdt_mock.c  hal_wdt_mock.h
firmware-c6/components/bsp/private/: hal_pin_map.h
firmware-c6/components/cluster_map/: CMakeLists.txt  cluster_map.c
firmware-c6/components/cluster_map/include/: cluster_map.h
firmware-c6/components/control/: CMakeLists.txt  control_loop.c  control_task.c
firmware-c6/components/control/include/: control_loop.h  control_task.h
firmware-c6/components/data_model/: CMakeLists.txt
firmware-c6/components/data_model/include/: data_model.h
firmware-c6/components/io_scan/: CMakeLists.txt  io_scan.c
firmware-c6/components/io_scan/include/: io_scan.h
firmware-c6/components/platform/: CMakeLists.txt
firmware-c6/components/platform/include/: platform_compat.h
firmware-c6/components/sensor_state/: CMakeLists.txt  sensor_state.c
firmware-c6/components/sensor_state/include/: sensor_state.h
firmware-c6/components/zigbee_bridge/: CMakeLists.txt  zigbee_bridge.c  zigbee_bridge_internal.h  zigbee_bridge_io.c
firmware-c6/components/zigbee_bridge/include/: uart_bridge_protocol.h  zigbee_bridge.h
firmware-c6/components/zigbee_bridge/mock/: zigbee_bridge_mock.c  zigbee_bridge_mock.h
firmware-c6/config/: thermostat_config.h
firmware-c6/main/: CMakeLists.txt  main.c
firmware-c6/tests/host/: CMakeLists.txt  test_bacnet_object_map.c  test_bacnet_objects.c  test_cluster_map.c  test_dummy.c  test_sensor_state.c
firmware-c6/tests/host/tests/: test_control_loop.c  test_hal_gpio.c  test_hal_nvs.c  test_hal_timer.c  test_hal_wdt.c  test_io_scan.c  test_zigbee_bridge.c
firmware-c6/tests/host/unity/: README.md
firmware-h2/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware-h2/components/bsp/: CMakeLists.txt  hal_gpio.c  hal_uart.c
firmware-h2/components/bsp/include/: hal_gpio.h  hal_uart.h
firmware-h2/components/bsp/mock/: hal_gpio_mock.c  hal_gpio_mock.h  hal_uart_mock.c  hal_uart_mock.h
firmware-h2/components/bsp/private/: hal_pin_map.h
firmware-h2/components/platform/include/: platform_compat.h
firmware-h2/components/uart_bridge/: CMakeLists.txt  uart_bridge.c  uart_bridge_framing.c
firmware-h2/components/uart_bridge/include/: uart_bridge.h
firmware-h2/components/zigbee_coordinator/: CMakeLists.txt  zigbee_cluster_handler.c  zigbee_coordinator.c
firmware-h2/components/zigbee_coordinator/include/: zigbee_cluster_handler.h  zigbee_coordinator.h
firmware-h2/main/: CMakeLists.txt  idf_component.yml  main.c
firmware-h2/tests/host/: CMakeLists.txt  test_dummy.c  test_uart_bridge_framing.c
firmware-h2/tests/host/tests/: test_cluster_handler.c  test_h2_hal.c
firmware-h2/tests/host/unity/: README.md
scripts/: idf.sh  test-host.sh
